Fix overlapping code line-height
When you have code in a table cell or some container where it wraps to multiple lines after a short amount of characters, the code overlaps itself and is illegible. This fixes that.

--- a/markdownreader.css
+++ b/markdownreader.css
@@ -195,7 +195,7 @@ pre{
 code.inline {
 	padding: 1px 3px;
 	font-size: .72rem;
-	line-height: .72rem;
+	line-height: 1.12rem;
 	color: #c25;
 	background-color: #f7f7f9;
 	-webkit-border-radius: 3px;
